--- a/.github/workflows/linux-arm.yml
+++ b/.github/workflows/linux-arm.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - master
+      - main_armv7
 
 env:
   DEBIAN_FRONTEND: noninteractive
@@ -31,7 +32,7 @@ jobs:
             --output=type=docker \
             --platform=linux/arm/v7 \
             --build-arg OPENCV_VERSION \
-            ./docker/ubuntu18-dotnetcore3.1-opencv4.5.3
+            ./docker/5.0.403-bullseye-slim-arm32v7
 
       - name: Extract build files from Docker instance
         run: |
@@ -43,7 +44,12 @@ jobs:
           sed -E --in-place=.bak "s/<version>[0-9]\.[0-9]{1,2}\.[0-9]{1,2}.[0-9]{8}(-beta[0-9]*)?<\/version>/<version>${OPENCV_VERSION}.$(date '+%Y%m%d')<\/version>/" nuget/OpenCvSharp4.runtime.linux-arm.nuspec
           cp artifacts/libOpenCvSharpExtern.so nuget/
           dotnet pack nuget/OpenCvSharp4.runtime.linux-arm.csproj -o artifacts_arm
-
+          
+      - uses: actions/upload-artifact@v2
+        with:
+          name: artifacts_linux_arm_lib
+          path: artifacts/libOpenCvSharpExtern.so 
+                    
       - uses: actions/upload-artifact@v2
         with:
           name: artifacts_linux_arm
