--- a/docker/5.0.403-bullseye-slim-gst-arm32v7/Dockerfile
+++ b/docker/5.0.403-bullseye-slim-gst-arm32v7/Dockerfile
@@ -34,12 +34,13 @@ RUN apt-get update && apt-get -y install --no-install-recommends \
       libtesseract-dev \
       libgdiplus \
     libgstreamer1.0-0 \
+    libgstreamer-plugins-base1.0-0 \
+    libgstreamer-plugins-base1.0-dev \
       gstreamer1.0-plugins-base \
       gstreamer1.0-plugins-good \
       gstreamer1.0-plugins-bad \
       gstreamer1.0-plugins-ugly \
       gstreamer1.0-libav \
-      gstreamer1.0-doc \
       gstreamer1.0-tools \
     && apt-get -y clean \
     && rm -rf /var/lib/apt/lists/*
