--- a/docker/5.0-bullseye-slim-arm32v7/Dockerfile
+++ b/docker/5.0-bullseye-slim-arm32v7/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:5.0.403-bullseye-slim-arm32v7
+FROM mcr.microsoft.com/dotnet/sdk:5.0-bullseye-slim-arm32v7
 
 ENV DEBIAN_FRONTEND=noninteractive
 ARG OPENCV_VERSION=4.5.3
