--- a/.github/workflows/linux-arm.yml
+++ b/.github/workflows/linux-arm.yml
@@ -32,7 +32,7 @@ jobs:
             --output=type=docker \
             --platform=linux/arm/v7 \
             --build-arg OPENCV_VERSION \
-            ./docker/5.0.403-bullseye-slim-arm32v7
+            ./docker/5.0-bullseye-slim-arm32v7
 
       - name: Extract build files from Docker instance
         run: |
