--- a/.github/workflows/linux-arm64.yml
+++ b/.github/workflows/linux-arm64.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches:
       - master
-      - main_armv7
+      - arm64
 
 env:
   DEBIAN_FRONTEND: noninteractive
@@ -30,9 +30,9 @@ jobs:
           docker build \
             -t opencvsharp-linux-arm:latest \
             --output=type=docker \
-            --platform=linux/arm/v7 \
+            --platform=linux/arm64 \
             --build-arg OPENCV_VERSION \
-            ./docker/5.0-bullseye-slim-gst-arm32v7
+            ./docker/5.0-bullseye-slim
 
       - name: Extract build files from Docker instance
         run: |
