--- a/docker/5.0-bullseye-slim-arm64/Dockerfile
+++ b/docker/5.0-bullseye-slim-arm64/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:5.0-focal-arm64v8
 
 ENV DEBIAN_FRONTEND=noninteractive
-ARG OPENCV_VERSION=4.5.3
+ARG OPENCV_VERSION=4.5.5
 
 WORKDIR /
 
@@ -58,7 +58,7 @@ RUN cd opencv && mkdir build && cd build && \
     -D BUILD_PERF_TESTS=OFF \
     -D BUILD_TESTS=OFF \
     -D BUILD_JAVA=OFF \
-    -D BUILD_opencv_apps=OFF \
+    -D BUILD_opencv_app=OFF \
     -D BUILD_opencv_barcode=OFF \
     -D BUILD_opencv_java_bindings_generator=OFF \
     -D BUILD_opencv_js_bindings_generator=OFF \
